Small bundling improvements

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,6 @@
 
   <body>
     <div id="app"></div>
-    <script src="client.min.js"></script>
+    <script src="rd3g.bundle.js"></script>
   </body>
 </html>
