--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -7,6 +7,6 @@
 
 <body>
     <div id="app"></div>
-    <script src="rd3g.bundle.js"></script>
+    <script src="rd3g.sandbox.bundle.js"></script>
 </body>
 </html>
