--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>react-d3-graph</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="shortcut icon" href="https://danielcaldas.github.io/react-d3-graph/sandbox/favicon.ico">
 </head>
 <body>
     <div id="app"></div>
